First pass at setting up scroll configuration coming from sway

--- a/dot_config/scroll/config
+++ b/dot_config/scroll/config
@@ -21,6 +21,9 @@ hide_edge_borders smart
 seat seat0 xcursor_theme Bibata-Modern-Classic 24
 seat seat0 fallback true
 seat seat0 hide_cursor 1000
+set_mode h after focus
+focus_wrapping no
+
 set $gnome-schema org.gnome.desktop.interface
 exec_always  {
         gsettings set $gnome-schema cursor-theme 'Bibata-Modern-Classic'
@@ -53,7 +56,7 @@ exec swaybg -c '#000000'
 
 # Variables
 set $mod Mod4
-set $scripts ~/.config/sway/scripts
+set $scripts ~/.config/scroll/scripts
 set $host kitty
 set $chrome flatpak run com.google.Chrome
 
@@ -94,14 +97,26 @@ workspace 2 output "eDP-2"
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+0 move container to workspace 2
 
-bindsym Ctrl+N exec flatpak run com.google.Chrome
-bindsym Ctrl+Shift+N exec flatpak run com.google.Chrome --incognito
-bindsym $mod+Return exec $host -e fish
 bindsym $mod+Shift+Q kill
 bindsym $mod+D exec rofi -show drun 
+
+bindsym Ctrl+N exec flatpak run com.google.Chrome
+bindsym Ctrl+Shift+N exec flatpak run com.google.Chrome --incognito
+
+bindsym $mod+Return exec $host -e fish
 # opening terminal in same dir as focused nvim
+
+# Check if focused window is nvim
+#scrollmsg -t get_tree | jq -e ".. | select(.focused? == true) | select(.app_id == \"nvim\" ...)"
 # bindsym $mod+t exec kitty --directory "$(readlink /proc/$(swaymsg -t get_tree | jq -r '.. | select(.focused? == true) | .pid')/cwd 2>/dev/null || pwd)" -e fish
-# possibly also make it in the same git tree or branch?
+
+# If nvim detected:
+#set_mode v                    # Switch to vertical temporarily  
+#kitty --directory "$(pwd)"    # Open terminal in same directory
+#set_size v 0.666667          # Resize nvim to 2/3 height
+#focus down                   # Move to terminal
+#set_size v 0.333333          # Resize terminal to 1/3 height  
+#set_mode h after focus       # Switch back to horizontal mode
 
 bindsym $mod+V exec cliphist list | rofi -dmenu -theme-str '#listview { columns : 1 ; lines: 8 ; }' | cliphist decode | wl-copy
 bindsym $mod+Shift+V exec rofimoji -a clipboard
@@ -187,6 +202,23 @@ for_window [app_id="nmtui"] border pixel 0, floating enable, resize 35% 35%, mov
 for_window [app_id="blueman-manager"] border pixel 0, floating enable, resize 35% 35%, move 63% 60%
 for_window [app_id="pavucontrol"] border pixel 0, floating enable, resize 35% 35%, move 63% 60%
 
+# Layout settings
+layout_default_width 1.0
+layout_default_height 1.0
+layout_widths [0.33333333 0.5 0.666666667 1.0]
+layout_heights [0.33333333 0.5 0.666666667 1.0]
+
+# Jump config
+jump_labels_color $cl_high        
+jump_labels_background $cl_back  
+jump_labels_scale 0.8           
+jump_labels_keys asdfghjkl;    
+
+#bindsym --no-repeat $mod+slash jump
+#bindsym --no-repeat $mod+Shift+slash jump container
+#bindsym --no-repeat $mod+Ctrl+slash jump workspaces
+#bindsym --no-repeat $mod+Alt+slash jump floating
+
 # Input Devices
 input type:touchpad {
     dwt enabled
@@ -199,47 +231,43 @@ input type:keyboard {
   xkb_options caps:none
 }
 
-# Gestures
+gesture_scroll_enable true 
+gesture_scroll_fingers 4
+gesture_scroll_sensitivity 1.0
+
 bindgesture {
 swipe:3:right  exec $scripts/gestures backward
-swipe:3:left exec $scripts/gestures forward
-swipe:3:up   exec rofi -show drun
-swipe:3:down  exec killall rofi
+swipe:3:left   exec $scripts/gestures forward
+swipe:3:up     move container to output up; focus output up
+swipe:3:down   move container to output down; focus output down
 
-pinch:4:outward   exec swaymsg gaps inner current plus 25
-pinch:4:inward  exec swaymsg gaps inner current minus 25
-pinch:5:outward   exec swaymsg gaps inner current plus 50
-pinch:5:inward  exec swaymsg gaps inner current minus 50
+pinch:4:outward   jump 
+pinch:4:inward    jump
+pinch:5:outward   scale_workspace incr 0.1
+pinch:5:inward    scale_workspace incr -0.1
 
-swipe:4:up   exec $waybar
-swipe:4:down  exec $waybar
-swipe:4:right  exec swaymsg 'workspace next_on_output'
-swipe:4:left  exec swaymsg 'workspace prev_on_output'
+swipe:5:right  align right; cycle_size h next
+swipe:5:left   align left; cycle_size h next
+swipe:5:up     align up; cycle_size v next
+swipe:5:down   align down; cycle_size v next
 
-swipe:5:up   exec swaymsg gaps vertical current plus 50
-swipe:5:down  exec swaymsg gaps vertical current minus 50
-swipe:5:right  exec $scripts/gestures pgup
-swipe:5:left exec $scripts/gestures pgdn
+}
+
+# Animations
+animations {
+
+enabled yes
+frequency_ms 8
+# Minimal linear animations - test baseline
+default yes 100 var 3 [ 0 0 1 1 ]
+window_move yes 100 var 3 [ 0 0 1 1 ]
+window_open yes 100 var 3 [ 0 0 1 1 ]
+window_size yes 100 var 3 [ 0 0 1 1 ]
+#[ 0.645 0.045 0.355 1 ] for ease-in-out
 
 }
 
 ---
-# Layout settings
-layout_default_width 0.5
-layout_default_height 1.0
-layout_widths [0.33333333 0.5 0.666666667 1.0]
-layout_heights [0.33333333 0.5 0.666666667 1.0]
-
-
-# Animations
-animations {
-    enabled yes
-    default yes 300 var 3 [ 0.215 0.61 0.355 1 ]
-    window_open yes 300 var 3 [ 0 0 1 1 ]
-    window_move yes 300 var 3 [ 0.215 0.61 0.355 1 ] off 0.05 6 [0 0.6 0.4 0 1 0 0.4 -0.6 1 -0.6]
-    window_size yes 300 var 3 [ -0.35 0 0 0.5 ]
-}
-
     # Layout mode
     bindsym $mod+bracketleft set_mode h
     bindsym $mod+bracketright set_mode v
@@ -265,16 +293,6 @@ animations {
     # Overview
     bindsym --no-repeat $mod+tab scale_workspace overview
     bindsym --whole-window button8 scale_workspace overview
-
-    # Jump
-    # jump_labels_color #9e1530FF
-    # jump_labels_background #15309eFF
-    # jump_labels_scale 0.9
-    # jump_labels_keys asdf
-    bindsym --no-repeat $mod+slash jump
-    bindsym --no-repeat $mod+Shift+slash jump container
-    bindsym --no-repeat $mod+Ctrl+slash jump workspaces
-    bindsym --no-repeat $mod+Alt+slash jump floating
 
     # Content
     bindsym $mod+comma scale_content incr -0.05
@@ -451,10 +469,5 @@ mode "trail" {
 }
 bindsym $mod+Shift+semicolon mode "trail"
 
-focus_wrapping no
 
-bindgesture swipe:4:right workspace next
-bindgesture swipe:4:left workspace prev
-
-bindgesture swipe:4:up scale_workspace overview 
 
