--- a/dot_config/kanshi/config
+++ b/dot_config/kanshi/config
@@ -9,10 +9,10 @@ profile Duo {
     output eDP-2 scale 2 position 0,900 adaptive_sync on
     exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_1 rs.wl.gammarelay Temperature q 3850
     exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_2 rs.wl.gammarelay Temperature q 3350
-    exec swaymsg input "1267:16986:ELAN9009:00_04F3:425A" map_to_output eDP-2
-    exec swaymsg input "1267:16987:ELAN9008:00_04F3:425B" map_to_output eDP-1
-    exec swaymsg input "1267:16986:ELAN9009:00_04F3:425A_Stylus" map_to_output eDP-2
-    exec swaymsg input "1267:16987:ELAN9008:00_04F3:425B_Stylus" map_to_output eDP-1
+    exec scrollmsg input "1267:16986:ELAN9009:00_04F3:425A" map_to_output eDP-2
+    exec scrollmsg input "1267:16987:ELAN9008:00_04F3:425B" map_to_output eDP-1
+    exec scrollmsg input "1267:16986:ELAN9009:00_04F3:425A_Stylus" map_to_output eDP-2
+    exec scrollmsg input "1267:16987:ELAN9008:00_04F3:425B_Stylus" map_to_output eDP-1
     exec waybar
 }
 
@@ -23,9 +23,9 @@ profile Desktop {
     exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_1 rs.wl.gammarelay Temperature q 3850
     exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_2 rs.wl.gammarelay Temperature q 3350
     exec busctl --user set-property rs.wl-gammarelay /outputs/HDMI_A_1 rs.wl.gammarelay Temperature q 4000
-    exec swaymsg input "1267:16986:ELAN9009:00_04F3:425A" map_to_output eDP-2
-    exec swaymsg input "1267:16987:ELAN9008:00_04F3:425B" map_to_output eDP-1
-    exec swaymsg input "1267:16986:ELAN9009:00_04F3:425A_Stylus" map_to_output eDP-2
-    exec swaymsg input "1267:16987:ELAN9008:00_04F3:425B_Stylus" map_to_output eDP-1
+    exec scrollmsg input "1267:16986:ELAN9009:00_04F3:425A" map_to_output eDP-2
+    exec scrollmsg input "1267:16987:ELAN9008:00_04F3:425B" map_to_output eDP-1
+    exec scrollmsg input "1267:16986:ELAN9009:00_04F3:425A_Stylus" map_to_output eDP-2
+    exec scrollmsg input "1267:16987:ELAN9008:00_04F3:425B_Stylus" map_to_output eDP-1
     exec waybar
 }
