--- a/dot_config/scroll/config
+++ b/dot_config/scroll/config
@@ -150,17 +150,16 @@ bindsym $mod+Shift+9 exec $chrome --app=https://app.slack.com/client/T045A37HTU2
 bindsym $mod+Shift+E exec $chrome --app=https://drive.google.com/drive/u/0/
 bindsym $mod+B exec  flatpak run io.bassi.Amberol
 
-bindsym F1 exec blueman-manager
-bindsym F2 exec pavucontrol    
+bindsym F1 exec $brightness-down  
+bindsym F2 exec $brightness-up   
 bindsym F3 exec kitty --class "nmtui" -e nmtui # change to iwmenu in rofi?
-bindsym F4 exec $brightness-down  
-bindsym F5 exec $brightness-up   
-bindsym F6 exec $volume-mute
-bindsym F7 exec $volume-down
-bindsym F8 exec $volume-up
-#battery menu
-###bindsym F9 exec 
-bindsym F10 exec $power-menu 
+bindsym F4 exec blueman-manager
+bindsym F5 exec pavucontrol    
+bindsym F6 exec $power-menu 
+# pick one more bindsym F7 exec 
+bindsym F8 exec $volume-mute
+bindsym F9 exec $volume-down
+bindsym F10 exec $volume-up
 
 bindsym $mod+Shift+Tab focus mode_toggle
 bindsym $mod+Tab floating toggle
@@ -177,13 +176,16 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-bindsym $mod+BackSpace sticky toggle
 bindsym $mod+f fullscreen
+
+# swap with the pin functionality?
+bindsym $mod+BackSpace sticky toggle
 
 #bring back
 #bindsym $mod+p exec notify-send "Pomodoro" "$($scripts/pomo clock)" -t 250
 #bindsym $mod+Shift+p exec $scripts/pomo pause && notify-send "⏸️ Paused Pomodoro" -t 250
 
+#discard?
 bindsym $mod+Shift+f    resize set 1920 1080
 bindsym $mod+g          resize set 900 500
 bindsym $mod+Shift+g    resize set 500 500
@@ -191,7 +193,7 @@ bindsym $mod+Shift+g    resize set 500 500
 # Chrome webapps rules
 for_window [app_id="^chrome-.*"] shortcuts_inhibitor disable
 
-# Utilities rules
+# Utilities rules - discard?
 for_window [app_id="rofimoji"] border pixel 0, floating enable, resize 35% 35%, move 63% 60%
 for_window [app_id="floating-term"] floating enable, resize 55% 35%, move 63% 60%
 for_window [app_id="shortcutwidget"] border pixel 0, floating enable, resize 35% 35%, move 63% 60%
@@ -209,9 +211,9 @@ layout_widths [0.33333333 0.5 0.666666667 1.0]
 layout_heights [0.33333333 0.5 0.666666667 1.0]
 
 # Jump config
-jump_labels_color $cl_high        
-jump_labels_background $cl_back  
-jump_labels_scale 0.8           
+jump_labels_color $cl_high 
+#jump_labels_background $cl_back  
+jump_labels_scale 0.5           
 jump_labels_keys asdfghjkl;    
 
 #bindsym --no-repeat $mod+slash jump
@@ -267,207 +269,200 @@ window_size yes 100 var 3 [ 0 0 1 1 ]
 
 }
 
----
-    # Layout mode
-    bindsym $mod+bracketleft set_mode h
-    bindsym $mod+bracketright set_mode v
-#
-#
-
     # nomode what is nomode?
-    bindsym $mod+Alt+$left move left nomode
-    bindsym $mod+Alt+$down move down nomode
-    bindsym $mod+Alt+$up move up nomode
-    bindsym $mod+Alt+$right move right nomode
-    bindsym $mod+Alt+home move beginning nomode
-    bindsym $mod+Alt+end move end nomode
+#    bindsym $mod+Alt+$left move left nomode
+#    bindsym $mod+Alt+$down move down nomode
+#    bindsym $mod+Alt+$up move up nomode
+#    bindsym $mod+Alt+$right move right nomode
+#    bindsym $mod+Alt+home move beginning nomode
+#    bindsym $mod+Alt+end move end nomode
 
 # Scaling
     # Workspace
-    bindsym $mod+Shift+comma scale_workspace incr -0.05
-    bindsym --whole-window $mod+Shift+button4 scale_workspace incr -0.05
-    bindsym $mod+Shift+period scale_workspace incr 0.05
-    bindsym --whole-window $mod+Shift+button5 scale_workspace incr 0.05
-    bindsym $mod+Shift+Ctrl+period scale_workspace reset
+#    bindsym $mod+Shift+comma scale_workspace incr -0.05
+#    bindsym --whole-window $mod+Shift+button4 scale_workspace incr -0.05
+#    bindsym $mod+Shift+period scale_workspace incr 0.05
+#    bindsym --whole-window $mod+Shift+button5 scale_workspace incr 0.05
+#    bindsym $mod+Shift+Ctrl+period scale_workspace reset
 
     # Overview
-    bindsym --no-repeat $mod+tab scale_workspace overview
-    bindsym --whole-window button8 scale_workspace overview
+#    bindsym --no-repeat $mod+tab scale_workspace overview
+#    bindsym --whole-window button8 scale_workspace overview
 
     # Content
-    bindsym $mod+comma scale_content incr -0.05
-    bindsym --whole-window $mod+button4 scale_content incr -0.05
-    bindsym $mod+period scale_content incr 0.05
-    bindsym --whole-window $mod+button5 scale_content incr 0.05
-    bindsym $mod+Ctrl+period scale_content reset
+#    bindsym $mod+comma scale_content incr -0.05
+#    bindsym --whole-window $mod+button4 scale_content incr -0.05
+#    bindsym $mod+period scale_content incr 0.05
+#    bindsym --whole-window $mod+button5 scale_content incr 0.05
+#    bindsym $mod+Ctrl+period scale_content reset
 
     # Toggle the current focus between tiling and floating mode
-    bindsym $mod+y focus mode_toggle
+#    bindsym $mod+y focus mode_toggle
     # Toggle layout type (h<->v)
-    bindsym $mod+Shift+y layout_transpose
+#    bindsym $mod+Shift+y layout_transpose
 
     # Float a window
-    bindsym $mod+Shift+f floating toggle
+#    bindsym $mod+Shift+f floating toggle
 
     # Toggle sticky
-    bindsym $mod+Shift+Ctrl+a sticky toggle
+#    bindsym $mod+Shift+Ctrl+a sticky toggle
     # Toggle pin
-    bindsym --no-repeat $mod+a pin beginning
-    bindsym --no-repeat $mod+Shift+a pin end
+#    bindsym --no-repeat $mod+a pin beginning
+#    bindsym --no-repeat $mod+Shift+a pin end
 
     # Selection
-    bindsym --no-repeat $mod+Insert selection toggle
-    bindsym --no-repeat $mod+Ctrl+Insert selection reset
-    bindsym --no-repeat $mod+Shift+Insert selection move
-    bindsym --no-repeat $mod+Ctrl+Shift+Insert selection workspace
-    bindsym --no-repeat $mod+Alt+Insert selection to_trail
+#    bindsym --no-repeat $mod+Insert selection toggle
+#    bindsym --no-repeat $mod+Ctrl+Insert selection reset
+#    bindsym --no-repeat $mod+Shift+Insert selection move
+#    bindsym --no-repeat $mod+Ctrl+Shift+Insert selection workspace
+#    bindsym --no-repeat $mod+Alt+Insert selection to_trail
 
     # Marks
-    bindsym $mod+m exec scroll-mark-toggle.sh
-    bindsym $mod+Shift+m exec scroll-mark-remove.sh
-    bindsym $mod+apostrophe exec scroll-mark-switch.sh
+#    bindsym $mod+m exec scroll-mark-toggle.sh
+#    bindsym $mod+Shift+m exec scroll-mark-remove.sh
+#    bindsym $mod+apostrophe exec scroll-mark-switch.sh
 
 
 # Mode modifiers
 #
-mode "modifiers" {
-    bindsym $right set_mode after; mode default 
-    bindsym $left set_mode before; mode default 
-    bindsym home set_mode beginning; mode default 
-    bindsym end set_mode end; mode default 
-    bindsym $up set_mode focus; mode default 
-    bindsym $down set_mode nofocus; mode default 
-    bindsym h set_mode center_horiz; mode default 
-    bindsym Shift+h set_mode nocenter_horiz; mode default 
-    bindsym v set_mode center_vert; mode default 
-    bindsym Shift+v set_mode nocenter_vert; mode default 
-    bindsym r set_mode reorder_auto; mode default 
-    bindsym Shift+r set_mode noreorder_auto; mode default 
-
-    # Return to default mode
-    bindsym Escape mode "default"
-}
-bindsym $mod+backslash mode "modifiers"
-
+#mode "modifiers" {
+#    bindsym $right set_mode after; mode default 
+#    bindsym $left set_mode before; mode default 
+#    bindsym home set_mode beginning; mode default 
+#    bindsym end set_mode end; mode default 
+#    bindsym $up set_mode focus; mode default 
+#    bindsym $down set_mode nofocus; mode default 
+#    bindsym h set_mode center_horiz; mode default 
+#    bindsym Shift+h set_mode nocenter_horiz; mode default 
+#    bindsym v set_mode center_vert; mode default 
+#    bindsym Shift+v set_mode nocenter_vert; mode default 
+#    bindsym r set_mode reorder_auto; mode default 
+#    bindsym Shift+r set_mode noreorder_auto; mode default 
 #
-# Resizing containers:
+#    # Return to default mode
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+backslash mode "modifiers"
 #
-bindsym $mod+minus cycle_size h prev
-bindsym $mod+equal cycle_size h next
-bindsym $mod+Shift+minus cycle_size v prev
-bindsym $mod+Shift+equal cycle_size v next
-
-mode "setsizeh" {
-    bindsym 1 set_size h 0.125; mode default
-    bindsym 2 set_size h 0.1666666667; mode default
-    bindsym 3 set_size h 0.25; mode default
-    bindsym 4 set_size h 0.333333333; mode default
-    bindsym 5 set_size h 0.375; mode default
-    bindsym 6 set_size h 0.5; mode default
-    bindsym 7 set_size h 0.625; mode default
-    bindsym 8 set_size h 0.6666666667; mode default
-    bindsym 9 set_size h 0.75; mode default
-    bindsym 0 set_size h 0.833333333; mode default
-    bindsym minus set_size h 0.875; mode default
-    bindsym equal set_size h 1.0; mode default
-
-    # Return to default mode
-    bindsym Escape mode "default"
-}
-bindsym $mod+b mode "setsizeh"
-
-mode "setsizev" {
-    bindsym 1 set_size v 0.125; mode default
-    bindsym 2 set_size v 0.1666666667; mode default
-    bindsym 3 set_size v 0.25; mode default
-    bindsym 4 set_size v 0.333333333; mode default
-    bindsym 5 set_size v 0.375; mode default
-    bindsym 6 set_size v 0.5; mode default
-    bindsym 7 set_size v 0.625; mode default
-    bindsym 8 set_size v 0.6666666667; mode default
-    bindsym 9 set_size v 0.75; mode default
-    bindsym 0 set_size v 0.833333333; mode default
-    bindsym minus set_size v 0.875; mode default
-    bindsym equal set_size v 1.0; mode default
-
-    # Return to default mode
-    bindsym Escape mode "default"
-}
-bindsym $mod+Shift+b mode "setsizev"
-
-mode "resize" {
-    # left will shrink the containers width
-    # right will grow the containers width
-    # up will shrink the containers height
-    # down will grow the containers height
-    bindsym $left resize shrink width 100px
-    bindsym $down resize grow height 100px
-    bindsym $up resize shrink height 100px
-    bindsym $right resize grow width 100px
-
-    # Return to default mode
-    bindsym Escape mode "default"
-}
-bindsym $mod+Shift+r mode "resize"
-
-mode "align" {
-    bindsym c align center; mode default
-    bindsym m align middle; mode default
-    bindsym r align reset; mode default
-    bindsym $left align left; mode default
-    bindsym $right align right; mode default
-    bindsym $up align up; mode default
-    bindsym $down align down; mode default
-    bindsym Escape mode "default"
-}
-bindsym $mod+c mode "align"
-
-mode "fit_size" {
-    bindsym w fit_size h visible proportional; mode default
-    bindsym Shift+w fit_size v visible proportional; mode default
-    bindsym Ctrl+w fit_size h visible equal; mode default
-    bindsym Ctrl+Shift+w fit_size v visible equal; mode default
-
-    bindsym $right fit_size h toend proportional; mode default
-    bindsym Shift+$right fit_size v toend proportional; mode default
-    bindsym Ctrl+$right fit_size h toend equal; mode default
-    bindsym Ctrl+Shift+$right fit_size v toend equal; mode default
-
-    bindsym $left fit_size h tobeg proportional; mode default
-    bindsym Shift+$left fit_size v tobeg proportional; mode default
-    bindsym Ctrl+$left fit_size h tobeg equal; mode default
-    bindsym Ctrl+Shift+$left fit_size v tobeg equal; mode default
-
-    bindsym $up fit_size h active proportional; mode default
-    bindsym Shift+$up fit_size v active proportional; mode default
-    #bindsym Ctrl+$up fit_size h active equal; mode default
-    #bindsym Ctrl+Shift+$up fit_size v active equal; mode default
-
-    bindsym $down fit_size h all proportional; mode default
-    bindsym Shift+$down fit_size v all proportional; mode default
-    bindsym Ctrl+$down fit_size h all equal; mode default
-    bindsym Ctrl+Shift+$down fit_size v all equal; mode default
-}
-bindsym $mod+w mode "fit_size"
-
-mode "trailmark" {
-    bindsym bracketright trailmark next
-    bindsym bracketleft trailmark prev
-    bindsym semicolon trailmark toggle; mode default
-    bindsym Escape mode "default"
-}
-bindsym $mod+semicolon mode "trailmark"
-
-mode "trail" {
-    bindsym bracketright trail next
-    bindsym bracketleft trail prev
-    bindsym semicolon trail new; mode default
-    bindsym d trail delete; mode default
-    bindsym c trail clear; mode default
-    bindsym insert trail to_selection; mode default
-    bindsym Escape mode "default"
-}
-bindsym $mod+Shift+semicolon mode "trail"
-
-
+##
+## Resizing containers:
+##
+#bindsym $mod+minus cycle_size h prev
+#bindsym $mod+equal cycle_size h next
+#bindsym $mod+Shift+minus cycle_size v prev
+#bindsym $mod+Shift+equal cycle_size v next
+#
+#mode "setsizeh" {
+#    bindsym 1 set_size h 0.125; mode default
+#    bindsym 2 set_size h 0.1666666667; mode default
+#    bindsym 3 set_size h 0.25; mode default
+#    bindsym 4 set_size h 0.333333333; mode default
+#    bindsym 5 set_size h 0.375; mode default
+#    bindsym 6 set_size h 0.5; mode default
+#    bindsym 7 set_size h 0.625; mode default
+#    bindsym 8 set_size h 0.6666666667; mode default
+#    bindsym 9 set_size h 0.75; mode default
+#    bindsym 0 set_size h 0.833333333; mode default
+#    bindsym minus set_size h 0.875; mode default
+#    bindsym equal set_size h 1.0; mode default
+#
+#    # Return to default mode
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+b mode "setsizeh"
+#
+#mode "setsizev" {
+#    bindsym 1 set_size v 0.125; mode default
+#    bindsym 2 set_size v 0.1666666667; mode default
+#    bindsym 3 set_size v 0.25; mode default
+#    bindsym 4 set_size v 0.333333333; mode default
+#    bindsym 5 set_size v 0.375; mode default
+#    bindsym 6 set_size v 0.5; mode default
+#    bindsym 7 set_size v 0.625; mode default
+#    bindsym 8 set_size v 0.6666666667; mode default
+#    bindsym 9 set_size v 0.75; mode default
+#    bindsym 0 set_size v 0.833333333; mode default
+#    bindsym minus set_size v 0.875; mode default
+#    bindsym equal set_size v 1.0; mode default
+#
+#    # Return to default mode
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+Shift+b mode "setsizev"
+#
+#mode "resize" {
+#    # left will shrink the containers width
+#    # right will grow the containers width
+#    # up will shrink the containers height
+#    # down will grow the containers height
+#    bindsym $left resize shrink width 100px
+#    bindsym $down resize grow height 100px
+#    bindsym $up resize shrink height 100px
+#    bindsym $right resize grow width 100px
+#
+#    # Return to default mode
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+Shift+r mode "resize"
+#
+#mode "align" {
+#    bindsym c align center; mode default
+#    bindsym m align middle; mode default
+#    bindsym r align reset; mode default
+#    bindsym $left align left; mode default
+#    bindsym $right align right; mode default
+#    bindsym $up align up; mode default
+#    bindsym $down align down; mode default
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+c mode "align"
+#
+#mode "fit_size" {
+#    bindsym w fit_size h visible proportional; mode default
+#    bindsym Shift+w fit_size v visible proportional; mode default
+#    bindsym Ctrl+w fit_size h visible equal; mode default
+#    bindsym Ctrl+Shift+w fit_size v visible equal; mode default
+#
+#    bindsym $right fit_size h toend proportional; mode default
+#    bindsym Shift+$right fit_size v toend proportional; mode default
+#    bindsym Ctrl+$right fit_size h toend equal; mode default
+#    bindsym Ctrl+Shift+$right fit_size v toend equal; mode default
+#
+#    bindsym $left fit_size h tobeg proportional; mode default
+#    bindsym Shift+$left fit_size v tobeg proportional; mode default
+#    bindsym Ctrl+$left fit_size h tobeg equal; mode default
+#    bindsym Ctrl+Shift+$left fit_size v tobeg equal; mode default
+#
+#    bindsym $up fit_size h active proportional; mode default
+#    bindsym Shift+$up fit_size v active proportional; mode default
+#    #bindsym Ctrl+$up fit_size h active equal; mode default
+#    #bindsym Ctrl+Shift+$up fit_size v active equal; mode default
+#
+#    bindsym $down fit_size h all proportional; mode default
+#    bindsym Shift+$down fit_size v all proportional; mode default
+#    bindsym Ctrl+$down fit_size h all equal; mode default
+#    bindsym Ctrl+Shift+$down fit_size v all equal; mode default
+#}
+#bindsym $mod+w mode "fit_size"
+#
+#mode "trailmark" {
+#    bindsym bracketright trailmark next
+#    bindsym bracketleft trailmark prev
+#    bindsym semicolon trailmark toggle; mode default
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+semicolon mode "trailmark"
+#
+#mode "trail" {
+#    bindsym bracketright trail next
+#    bindsym bracketleft trail prev
+#    bindsym semicolon trail new; mode default
+#    bindsym d trail delete; mode default
+#    bindsym c trail clear; mode default
+#    bindsym insert trail to_selection; mode default
+#    bindsym Escape mode "default"
+#}
+#bindsym $mod+Shift+semicolon mode "trail"
+#
+#
 
