adding pomodoro timer functionality 10.2

--- a/dot_config/scroll/config
+++ b/dot_config/scroll/config
@@ -58,6 +58,7 @@ set $mod Mod4
 set $scripts ~/.config/scroll/scripts
 set $host kitty
 set $chrome flatpak run com.google.Chrome
+exec --no-startup-id $scripts/pomodoro stop
 
 floating_modifier $mod normal
 
