--- a/dot_config/scroll/config
+++ b/dot_config/scroll/config
@@ -56,7 +56,7 @@ exec swaybg -c '#000000'
 # Variables
 set $mod Mod4
 set $scripts ~/.config/scroll/scripts
-set $host kitty
+set $host $scripts/host-terminal
 set $chrome flatpak run com.google.Chrome
 exec --no-startup-id $scripts/pomodoro stop
 
