--- a/dot_config/scroll/config
+++ b/dot_config/scroll/config
@@ -28,8 +28,9 @@ exec_always  {
         gsettings set $gnome-schema cursor-theme 'Bibata-Modern-Classic'
         gsettings set $gnome-schema color-scheme 'prefer-dark'
         gsettings set $gnome-schema cursor-size '48'
-        gsettings set $gnome-schema gtk-theme 'Catppuccin-Mocha-Standard-Green-Dark'
-        gsettings set org.gnome.desktop.interface.wm.preferences theme 'Catppuccin-Mocha-Standard-Green-Dark'
+        gsettings set $gnome-schema text-scaling-factor '2.0'
+        gsettings set $gnome-schema gtk-theme 'Catppuccin-Noir-Standard-Green-Dark'
+        gsettings set org.gnome.desktop.interface.wm.preferences theme 'Catppuccin-Noir-Standard-Green-Dark'
         gsettings set org.gnome.desktop.wm.preferences button-layout ""
         #gsettings set $gnome-schema icon-theme 'Your icon theme'
         #gsettings set $gnome-schema font-name 'Your font name'
